Qt porting page changed the link
svn path=/trunk/kdelibs/; revision=124997

--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -10,7 +10,7 @@ This document contains the changes you have to apply to programs written for
 KDE 2.x when you want to port them to KDE 3.0.<P>
 
 As a start you should have a look at doc/porting.doc in the Qt package,
-or <a href="http://doc.trolltech.com/porting.html">this page online</a>.<P>
+or <a href="http://doc.trolltech.com/3.0/porting.html">this page online</a>.<P>
 
 <H3><A NAME="TOC">Table of Contents</A></H3>
 
