--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -142,6 +142,9 @@ in order to have styles that fully integrate in KDE and Qt applications.
 ...is gone. Use KArrowButton instead, it offers about the same
 functionality.
 
+<H4>KDialogBase</H4>
+The deprecated getMainWidget() method has been removed. Use mainWidget() instead.
+
 <H4><P ALIGN="RIGHT"><A HREF="#TOC">Return to the Table of Contents</A></P></H4>
 
 <H3><A NAME="kio">Changes in kio</A></H3>
