--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -145,6 +145,13 @@ functionality.
 <H4>KDialogBase</H4>
 The deprecated getMainWidget() method has been removed. Use mainWidget() instead.
 
+<H4>KContainerLayout</H4>
+This class has been removed, use Qt layouts instead.
+
+<H4>KAccelMenu</H4>
+This class has been removed, Qt offers the same functionality.
+Use QPopupMenu/KPopupMenu or the XML-UI method for building menus.
+
 <H4><P ALIGN="RIGHT"><A HREF="#TOC">Return to the Table of Contents</A></P></H4>
 
 <H3><A NAME="kio">Changes in kio</A></H3>
