--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -172,6 +172,11 @@ This class has been removed, use Qt layouts instead.
 This class has been removed, Qt offers the same functionality.
 Use QPopupMenu/KPopupMenu or the XML-UI method for building menus.
 
+<H4>KAnimWidget</H4>
+This class no longer supports reading a list of images, instead it uses a
+single image-file that has been prepared with the kimage_concat tool.
+See kdelibs/pics/hicolor/kde for an example of its use.
+
 <H4><P ALIGN="RIGHT"><A HREF="#TOC">Return to the Table of Contents</A></P></H4>
 
 <H3><A NAME="kio">Changes in kio</A></H3>
