+<H4>KMessageBox</H4> +KMessageBox now does automatic line-breaking. When using plain-text, you should +remove any mid-sentence linebreaks. Only use line-breaks to indicate the end of +a paragraph.
svn path=/trunk/kdelibs/; revision=132814

--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -194,6 +194,11 @@ functionality.
 The WidgetList parameter has been renamed to QWidgetList. Behaviour
 is identical.
 
+<H4>KMessageBox</H4>
+KMessageBox now does automatic line-breaking. When using plain-text, you should 
+remove any mid-sentence linebreaks. Only use line-breaks to indicate the end of 
+a paragraph.
+
 <H4>KPanelApplet</H4>
 A new protected member method 'void reportBug()' was added. It gets called by
 Kicker if the 'Report Bug' entry in the context menu gets selected and should
