--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -383,7 +383,7 @@ setURLArgs does the job.
 The API has been cleaned up to be in line with the rest of kdelibs, in particular:
 <ul>
 <li>suggestions() now returns a QStringList instead of a pointer to a QStringList
-<li>intermediateBuffer() noew returns a QString instead of a pointer to a QString
+<li>intermediateBuffer() now returns a QString instead of a pointer to a QString
 <li>The signal <b>misspelling(QString, QStringList *, unsigned)</b> has changed to
     misspelling(const QString &amp;, const QStringList &amp;, unsigned int)
 <li>The signal <b>corrected(QString, QString, unsigned)</b> has changed to
